p3/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
